--- a/react-app/src/components/FormStyle.css
+++ b/react-app/src/components/FormStyle.css
@@ -65,3 +65,6 @@
     box-shadow: 0 0 5px black;
     border-radius: 5%;
 }
+.text-center{
+    background-color: linear-gradient(45deg , red , whitesmoke);
+}
